--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,8 @@ include(FindCUDA)
 
 
 
-file (GLOB GLOBSOURCES "*.cpp" "*.cu")
+#file (GLOB GLOBSOURCES "*.cpp" "*.cu")
+file (GLOB GLOBSOURCES "*.cpp")
 add_library (GLOBLIB ${GLOBSOURCES})
 file (GLOB CUDASOURCES "*.cu")
 cuda_add_library(CUDALIB ${CUDASOURCES})
@@ -54,6 +55,11 @@ cuda_add_library(CUDALIB ${CUDASOURCES})
 
 #file (GLOB DEMO "main.cpp")
 #add_executable(demo "main.cpp")
+
+LIST(APPEND CMAKE_CXX_FLAGS "-std=c++11 -O3 -ffast-math -Wall")
+list(APPEND CUDA_NVCC_FLAGS "-arch=sm_20;-std=c++11;-O2;-DVERBOSE")
+SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
+
 cuda_add_executable(demo "main.cpp")
 target_link_libraries(demo GLOBLIB CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
 
@@ -62,16 +68,11 @@ target_link_libraries(demo GLOBLIB CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
 
 
 
-
-LIST(APPEND CMAKE_CXX_FLAGS "-std=c++11 -O3 -ffast-math -Wall")
-
-LIST(APPEND CUDA_NVCC_FLAGS --compiler-options -fno-strict-aliasing -lineinfo -use_fast_math -Xptxas -dlcm=cg)
+#set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-Icpp11-range --std=c++11)
+#LIST(APPEND CUDA_NVCC_FLAGS --compiler-options -fno-strict-aliasing -lineinfo -use_fast_math -Xptxas -dlcm=cg)
 #LIST(APPEND CUDA_NVCC_FLAGS -Xcompiler "std=c++0x")
-LIST(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_20,code=sm_20)
-LIST(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_30,code=sm_30)
-LIST(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_35,code=sm_35)
-
-
-
-
-
+#LIST(APPEND CUDA_NVCC_FLAGS -Icpp11-range)
+#LIST(APPEND CUDA_NVCC_FLAGS --std=c++11)
+#LIST(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_20,code=sm_20)
+#LIST(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_30,code=sm_30)
+#LIST(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_35,code=sm_35)
