--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,11 +26,13 @@ include(FindCUDA)
 ###                                            ###
 ##################################################
 
+#list(APPEND CMAKE_CXX_FLAGS "-std=c++11 -ffast-math -Wall")
 list(APPEND CMAKE_CXX_FLAGS "-std=c++11 -O3 -ffast-math -Wall")
 
 #list(APPEND CUDA_NVCC_FLAGS "-std=c++11")
 list(APPEND CUDA_NVCC_FLAGS "-DVERBOSE")
 LIST(APPEND CUDA_NVCC_FLAGS "--compiler-options -fno-strict-aliasing -lineinfo -use_fast_math -Xptxas -dlcm=cg")
+list(APPEND CUDA_NVCC_FLAGS "-O3")
 LIST(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_20,code=sm_20")
 LIST(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_30,code=sm_30")
 LIST(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_35,code=sm_35")
