first working version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,3 +54,6 @@ cuda_add_executable(demo "main.cpp")
 target_link_libraries(demo GLOBLIB CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
 cuda_add_executable(convert "converter.cpp")
 target_link_libraries(convert GLOBLIB CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
+
+cuda_add_executable(example1 "example1.cpp")
+target_link_libraries(example1 GLOBLIB CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
