--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,11 @@ project (BACHELOR)
 ###                                            ###
 ##################################################
 
-find_package (MPI REQUIRED)
-find_package (CUDA REQUIRED)
+#find_package (MPI REQUIRED)
+#find_package (CUDA REQUIRED)
 
-include_directories (/opt/openmpi/include)
-include(FindCUDA)
+#include_directories (/opt/openmpi/include)
+#include(FindCUDA)
 
 ##################################################
 ###                                            ###
@@ -27,17 +27,17 @@ include(FindCUDA)
 ##################################################
 
 #list(APPEND CMAKE_CXX_FLAGS "-std=c++11 -ffast-math -Wall")
-list(APPEND CMAKE_CXX_FLAGS "-std=c++11 -O3 -ffast-math -Wall")
+list(APPEND CMAKE_CXX_FLAGS "-std=c++11 -fopenmp -O3 -ffast-math -Wall")
 
-list(APPEND CUDA_NVCC_FLAGS "-DVERBOSE")
-LIST(APPEND CUDA_NVCC_FLAGS "--compiler-options -fno-strict-aliasing -lineinfo -use_fast_math -Xptxas -dlcm=cg")
-LIST(APPEND CUDA_NVCC_FLAGS "-std=c++11")
-list(APPEND CUDA_NVCC_FLAGS "-O3")
-LIST(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_20,code=sm_20")
-LIST(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_30,code=sm_30")
-LIST(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_35,code=sm_35")
-
-set(CUDA_PROPAGATE_HOST_FLAGS OFF)
+#list(APPEND CUDA_NVCC_FLAGS "-DVERBOSE")
+#LIST(APPEND CUDA_NVCC_FLAGS "--compiler-options -fno-strict-aliasing -lineinfo -use_fast_math -Xptxas -dlcm=cg")
+#LIST(APPEND CUDA_NVCC_FLAGS "-std=c++11")
+#list(APPEND CUDA_NVCC_FLAGS "-O3")
+#LIST(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_20,code=sm_20")
+#LIST(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_30,code=sm_30")
+#LIST(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_35,code=sm_35")
+#
+#set(CUDA_PROPAGATE_HOST_FLAGS OFF)
 
 ##################################################
 ###                                            ###
@@ -47,13 +47,14 @@ set(CUDA_PROPAGATE_HOST_FLAGS OFF)
 
 file (GLOB GLOBSOURCES "*.cpp")
 add_library (GLOBLIB ${GLOBSOURCES})
-file (GLOB CUDASOURCES "*.cu")
-cuda_add_library(CUDALIB ${CUDASOURCES})
+#file (GLOB CUDASOURCES "*.cu")
+#cuda_add_library(CUDALIB ${CUDASOURCES})
 
-cuda_add_executable(demo "main.cpp")
-target_link_libraries(demo GLOBLIB CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
-cuda_add_executable(convert "converter.cpp")
-target_link_libraries(convert GLOBLIB CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
-
-cuda_add_executable(example1 "example1.cpp")
-target_link_libraries(example1 GLOBLIB CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
+add_executable(demo "main.cpp")
+target_link_libraries(demo GLOBLIB    ) # CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
+add_executable(convert "converter.cpp")
+target_link_libraries(convert GLOBLIB ) # CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
+add_executable(example1 "example1.cpp")
+target_link_libraries(example1 GLOBLIB) # CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
+add_executable(example "example.cpp")
+target_link_libraries(example GLOBLIB) # CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
