untempletize Quad Q1 9Point

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,3 +69,5 @@ add_executable(example1 "example1.cpp")
 target_link_libraries(example1 GLOBLIB) # CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
 add_executable(example "example.cpp"  )
 target_link_libraries(example GLOBLIB ) # CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
+add_executable(allinone "allinone.cpp")
+target_link_libraries(allinone GLOBLIB) # CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
