--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ project (BACHELOR)
 ##################################################
 
 #find_package (MPI REQUIRED)
-#find_package (CUDA REQUIRED)
+find_package (CUDA REQUIRED)
 
 #include_directories (/opt/openmpi/include)
 #include(FindCUDA)
@@ -33,12 +33,14 @@ list(APPEND CMAKE_CXX_FLAGS "-std=c++11 -fopenmp -O3 -ffast-math -Wall")
 #list(APPEND CUDA_NVCC_FLAGS "-DVERBOSE")
 #LIST(APPEND CUDA_NVCC_FLAGS "--compiler-options -fno-strict-aliasing -lineinfo -use_fast_math -Xptxas -dlcm=cg")
 #LIST(APPEND CUDA_NVCC_FLAGS "-std=c++11")
+#LIST(APPEND CUDA_NVCC_FLAGS "-std=c++0x")
 #list(APPEND CUDA_NVCC_FLAGS "-O3")
 #LIST(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_20,code=sm_20")
 #LIST(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_30,code=sm_30")
 #LIST(APPEND CUDA_NVCC_FLAGS "-gencode arch=compute_35,code=sm_35")
-#
+
 #set(CUDA_PROPAGATE_HOST_FLAGS OFF)
+#set(CUDA_PROPAGATE_HOST_FLAGS FALSE)
 
 find_package(OpenMP)
 #if (OPENMP_FOUND)
@@ -60,6 +62,8 @@ file (GLOB GLOBSOURCES "*.cpp")
 add_library (GLOBLIB ${GLOBSOURCES})
 #file (GLOB CUDASOURCES "*.cu")
 #cuda_add_library(CUDALIB ${CUDASOURCES})
+CUDA_COMPILE(cudamat csrmatrixgpu.cu)
+CUDA_COMPILE(cudavec vectorgpu.cu)
 
 add_executable(demo "main.cpp")
 target_link_libraries(demo GLOBLIB    ) # CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
@@ -71,3 +75,5 @@ add_executable(example "example.cpp"  )
 target_link_libraries(example GLOBLIB ) # CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
 add_executable(allinone "allinone.cpp")
 target_link_libraries(allinone GLOBLIB) # CUDALIB ${MPI_LIBRARIES} ${CUDA_LIBRARIES})
+#add_executable(allinone_gpu "allinone_gpu.cpp" cudastuff)
+#target_link_libraries(allinone_gpu GLOBLIB)# ${CUDA_LIBRARIES})
